# quantum-qkd-aero

./: .gitignore  README.md  dashboard.js  package-lock.json  package.json  pyproject.toml  qkd_model.py  results.json
01-Gate-Noise-Archive/: README.md
01-Gate-Noise-Archive/Quantum-Aero-Final/: quantum_qec.py
01-Gate-Noise-Archive/Quantum-Aero-RD/: THRESHOLDS.md
01-Gate-Noise-Archive/Quantum-Aero-RD 2/: noise_analysis.py
01-Gate-Noise-Archive/Quantum-Aero-RD 2/simulations/: quantum_test.py
01-Gate-Noise-Archive/simulations/: quantum_qec.py
docs/: INTERFACES.md  PHASE_2B4_DECOY_EVE.md  PHASE_2B5_BACKGROUND_LIGHT.md  PHASE_2B6_SEQUENCE.md  Quantum-QKD-Aero_Development_Record.md  SCHEMA_HARDENING_2B.md
docs/architecture/: ADR-0001-single-authoritative-pipeline.md  ADR-0002-three-axis-quantum-link-model.md
docs/archive_artifacts/: README.md
src/qkd/: bb84.py  channel.py  chsh.py  coherence.py  eve.py  fibre.py  mission.py  orbit.py  provenance.py  run.py  run_fibre.py  schema.py  signals.py  teleportation.py
tests/: test_bb84.py  test_channel.py  test_chsh.py  test_coherence.py  test_coupling.py  test_decoy.py  test_eve.py  test_fibre.py  test_fibre_sweep.py  test_mission.py  test_orbit.py  test_profile.py  test_provenance.py  test_schema.py  test_teleportation.py  test_teleportation_qiskit.py
tests/fixtures/: pr_a_pre_refactor_satellite_output.json
