[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "quantum-qkd-aero"
version = "0.2.0"
description = "Satellite QKD and quantum teleportation simulation sandbox."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "matplotlib",
]

[project.optional-dependencies]
dev = [
    "pytest",
]
qiskit = [
    "qiskit",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
